--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,3 +1,4 @@
-FROM kibana:5
+FROM kibana:5.1.1
 
 RUN kibana-plugin install x-pack
+RUN kibana-plugin install https://github.com/sivasamyk/logtrail/releases/download/0.1.6/logtrail-5.x-0.1.6.zip
