Add syslog and GELF

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - ./logstash/config:/etc/logstash/conf.d
     ports:
       - "5000:5000"
+      - "5000:5000/udp"
+      - "5001:5001"
+      - "5001:5001/udp"
     networks:
       - docker_elk
     depends_on:
