--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -1,10 +1,57 @@
 input {
-	tcp {
-		port => 5000
-	}
+  tcp {
+    port => 5000
+    type => syslog
+  }
+  gelf {
+    port => 5001
+    type => docker
+codec => multiline {
+      # Grok pattern names are valid! :)
+      pattern => "^%{TIMESTAMP_ISO8601} "
+      negate => true
+      what => previous
+    }
+#    codec => multiline {
+#      pattern => "^\s"
+#      what => "previous"
+#    }
+  } 
 }
 
-## Add your filters / logstash plugins configuration here
+
+filter {
+  if "-- MARK --" in [message] {
+    drop { }
+  }
+
+  if [type] == "syslog" {
+      syslog_pri { }
+
+      grok {
+        match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
+      add_field => [ "received_at", "%{@timestamp}" ]
+      add_field => [ "received_from", "%{host}" ]
+    }
+
+    date {
+      match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+    }
+
+    if !("_grokparsefailure" in [tags]) {
+      mutate {
+        replace => [ "source_host", "%{syslog_hostname}" ]
+        replace => [ "message", "%{syslog_message}" ]
+      }
+    }
+
+    mutate {
+      remove_field => [ "syslog_hostname", "syslog_message", "syslog_timestamp" ]
+    }
+
+  }
+}
+
 
 output {
 	elasticsearch {
